--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   "license": "MIT",
   "description": "A modern, versatile React Native component library with smooth animations, responsive layouts, and intuitive design, perfect for building clean and futuristic mobile interfaces.",
   "author": "Gilcenio Santos Vilanova Junior",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gilcenio/orbit-kit-ui.git"
+  },
   "devDependencies": {
     "@types/react": "^18.3.12",
     "@types/react-native": "^0.73.0",
