--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "devDependencies": {
     "@types/react": "^18.3.12",
     "@types/react-native": "^0.73.0",
+    "react-native-gesture-handler": "2.16.1",
+    "react-native-reanimated": "3.10.1",
     "typescript": "^5.6.3"
   },
   "scripts": {
@@ -21,7 +23,7 @@
     "prepublishOnly": "npm run build"
   },
   "files": [
-    "dist", 
+    "dist",
     "src"
   ],
   "keywords": [
@@ -37,9 +39,7 @@
     "access": "public"
   },
   "peerDependencies": {
-    "react-native-gesture-handler": ">=2.16.1"
-  },
-  "dependencies": {
-    "react-native-gesture-handler": "~2.16.1"
+    "react-native-gesture-handler": "^2.0.0",
+    "react-native-reanimated": "^3.0.0"
   }
 }
